--- a/custom_components/fve_control/manifest.json
+++ b/custom_components/fve_control/manifest.json
@@ -6,6 +6,6 @@
   "domain": "fve_control",
   "iot_class": "calculated",
   "name": "FVE Load Control",
-  "requirements": [],
-  "version": "0.2.3"
+  "requirements": ["requests"],
+  "version": "0.2.4"
 }
